# flumen-jax

./: .gitignore  model.py  pyproject.toml  test.py
scripts/: interactive_test.py  train_local.py  train_wandb.py
src/flumen_jax/: __init__.py  model.py  train.py  typing.py  utils.py
